# forge

./: .dockerignore  .env.example  .gitignore  .railwayignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.api  Dockerfile.migrate  Dockerfile.worker  README.md  docker-compose.override.yml  docker-compose.yml  identities.yaml.example  pyproject.toml  railway.toml  run_pipeline.py  setup.sh  start_worker.sh  worker.py
activities/: __init__.py  pipeline_activities.py
agents/: __init__.py  architect_agent.py  ba_agent.py  coding_agent.py  conflict_resolver.py  cto_agent.py  dependency_analyzer.py  langgraph_runner.py  pm_agent.py  project_scaffold.py  qa_agent.py  researcher_agent.py  stage_1_business_analyst.py  stage_2_researcher.py  stage_3_architect.py  stage_4_pm.py  stage_4_pm_elastic.py  stage_5_engineer.py  stage_6_qa.py  stage_7_cto.py  swarm_coordinator.py  worktree_manager.py
api/: __init__.py  run.py  server.py
auth/: Dockerfile  README.md  __init__.py  auth.ts  middleware.py  package-lock.json  package.json  secrets.py  seed.ts  server.ts  tsconfig.json  types.py
config/: __init__.py  agent_config.py  budget.py  concurrency.py  errors.py  local_models.py  model_router.py  rate_limiter.py
connections/: agent_tools.py  client.py  client_manager.py  models.py  oauth.py  pipeline_hooks.py  registry.py  tool_filter.py
context/: marketsavvy.md
contracts/: __init__.py  schemas.py
dashboard/: Dockerfile  README.md  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  start.sh  vite.config.ts
desktop/: APP_STORE_CHECKLIST.md  PRIVACY_POLICY.md  README.md  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/mobile/android/src/main/java/com/middlefingerlabs/forge/: ForgeFCMService.kt
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  tray.rs
docs/: agent-communication.md  codebase-rag.md  connections-development.md  connections-permissions.md  connections-setup.md  connections.md  github-setup.md  learning.md  multiplayer-setup.md  prompt-management.md  workflow-examples.md
infrastructure/: __init__.py  init-db.sql  init.sql
integrations/: git_identity.py  github_client.py  issue_tracker.py  linear_client.py  repo_connector.py  webhook_server.py
memory/: __init__.py  agent_log.py  observability.py  semantic_memory.py  state_store.py  working_memory.py
reports/: pipeline_None_20260222_213616.json
scripts/: __init__.py  deploy.sh  memory_admin.py  migrate.sh  run_e2e.sh  run_real_pipeline.py  setup.sh  (+6 more)
(+236 files in other folders)
