[build-system]
requires = ["setuptools>=75.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forge"
version = "0.1.0"
requires-python = ">=3.12"
description = "Forge – AI-powered pipeline orchestration"
dependencies = [
    "temporalio>=1.9.0",
    "pydantic[email]>=2.10.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "redis[hiredis]>=5.2.0",
    "asyncpg>=0.30.0",
    "anthropic>=0.43.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "rich>=13.0.0",
    "mem0ai>=1.0.0",
    "sentence-transformers>=3.0.0",
    "langfuse>=2.0.0",
    "litellm>=1.50.0",
    "cryptography>=44.0.0",
    "mcp>=1.0.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-java>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require GITHUB_TOKEN and real API access",
]

[tool.setuptools.packages.find]
include = ["activities*", "agents*", "api*", "auth*", "config*", "connections*", "contracts*", "memory*", "workflows*"]
