[package]
name = "forge-desktop"
version = "0.1.0"
description = "Forge Desktop — conversational agent interface"
authors = ["Middle Finger Labs"]
edition = "2021"

[lib]
name = "forge_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-websocket = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
keyring = "3"

# Mobile plugins (compile on all targets, activate on mobile)
tauri-plugin-biometric = "2"
tauri-plugin-haptics = "2"
tauri-plugin-deep-link = "2"

# Desktop-only plugins
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
